@@ -81,4 +81,5 @@ BUGFIXES:
 071 ==> 408793 - Memory leak when .psd file in album folder.
 072 ==> 408782 - In manual sorting, bad placement after new version creation.
 073 ==> 408471 - DigiKam crashes after about 10 photos viewed, random images then fail to load.
-074 ==> 
+074 ==> 408883 - Crash after opening video in Image Editor - /tmp runs out of space.
+075 ==> 
